<package>
  <name>rcpdf</name>
  <description>

    Robot Contact Point Description Format interfaces parser.

  </description>
  <maintainer email="thomas.moulard@gmail.com">Thomas Moulard</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rcpdf</url>
  <version>0.2.0</version>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <cpp cflags="-I${prefix}/include `rosboost-cfg --cflags`"
	 lflags="-L${prefix}/lib -lrcpdf -Wl,-rpath,${prefix}/lib" />
  </export>

  <build_depend>urdf</build_depend>
  <build_depend>urdf_interface</build_depend>
  <build_depend>rcpdf_interface</build_depend>

  <build_depend>boost</build_depend>
  <build_depend>tinyxml</build_depend>
</package>
